--- a/package.json
+++ b/package.json
@@ -10,24 +10,16 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@popperjs/core": "^2.10.2",
-        "@vitejs/plugin-vue": "^5.2.3",
         "axios": "^1.9.0",
-        "bootstrap": "^5.1.3",
-        "cross-env": "^7.0.3",
+        "cross-env": "^7.0",
         "laravel-mix": "^6.0.49",
-        "laravel-vite-plugin": "^1.2.0",
         "lodash": "^4.17.19",
         "resolve-url-loader": "^5.0.0",
-        "sass": "^1.32.11",
-        "sass-loader": "^11.0.1",
-        "vite": "^6.3.4",
-        "vue": "^3.5.13",
-        "vue-loader": "^16.8.3",
+        "sass": "^1.29.0",
+        "sass-loader": "^8.0.2",
         "vue-template-compiler": "^0.1.0"
     },
     "dependencies": {
-        "@vue/compiler-sfc": "^3.5.13",
         "bootstrap": "^5.3.5",
         "bootstrap-select": "^1.13.18",
         "chart.js": "^2.9.3",
@@ -35,18 +27,6 @@
         "jquery.easing": "^1.4.1",
         "md.bootstrappersiandatetimepicker": "^4.4.0",
         "scrollreveal": "^3.3.2",
-        "sweetalert": "^2.1.2",
-        "tailwindcss": "^4.1.5",
-        "vue-router": "^4.5.1"
-    },
-    "name": "modern-taillor",
-    "version": "1.0.0",
-    "description": "<p align=\"center\"><a href=\"https://laravel.com\" target=\"_blank\"><img src=\"https://raw.githubusercontent.com/laravel/art/master/logo-lockup/5%20SVG/2%20CMYK/1%20Full%20Color/laravel-logolockup-cmyk-red.svg\" width=\"400\"></a></p>",
-    "main": "webpack.mix.js",
-    "directories": {
-        "test": "tests"
-    },
-    "keywords": [],
-    "author": "",
-    "license": "ISC"
+        "sweetalert": "^2.1.2"
+    }
 }
